--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 user  www-data;
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log notice;
+error_log /var/log/nginx/error.log;
 pid        /var/run/nginx.pid;
 
 
@@ -26,14 +26,20 @@ http {
 
     server {
         listen 80;
+        root /usr/share/nginx/html;
         location / {
-            include uwsgi_params;
-            uwsgi_read_timeout 100;
-            uwsgi_pass unix:/run/uwsgi.sock;
+            autoindex on;
         }
-        location /static/ {
-            alias /app/static/;
+        error_log /var/log/nginx/error.log;
+        access_log /var/log/nginx/access.log;
 
+        location /api {
+            proxy_pass http://127.0.0.1:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 }
