--- a/supervisord.ini
+++ b/supervisord.ini
@@ -1,8 +1,11 @@
 [supervisord]
 nodaemon=true
 
-[program:uwsgi]
-command=/usr/local/bin/uwsgi --ini /etc/uwsgi/uwsgi.ini
+[program:uvicorn]
+command=uvicorn app:app --host 0.0.0.0 --port 8000 --reload
+directory=/app
+autostart=true
+autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -16,3 +19,5 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 stopsignal=QUIT
+
+
