--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,14 @@
-version: '3.8'
-
 services:
+  app:
+    container_name: tweet_app
+    build: .
+    ports:
+      - "8000:5050"
+    networks:
+      - mynetwork
+    depends_on:
+      - postgres
+
   postgres:
     container_name: postgres_container
     image: postgres
@@ -8,32 +16,14 @@ services:
       - POSTGRES_DB=tweet_db
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
-      - POSTGRES_HOST_AUTH_METHOD=trust
-      - log_destination=stderr
-      - logging_collector=on
-      - log_directory=db_log
-      - log_filename=postgresql-%Y-%m-%d_%H%M%S.log
-      - log_statement=all
     ports:
       - '5432:5432'
     volumes:
       - ./db:/var/lib/postgresql/data
       - ./db_log:/var/lib/postgresql/pg_log
-#    networks:
-#      - mynetwork
-#
-#  app:
-#    container_name: tweet_app
-#    build: .
-#    ports:
-#      - "8000:8000"
-#    networks:
-#      - mynetwork
-#    depends_on:
-#      - postgres
-#
-#
-#
-#networks:
-#  mynetwork:
-#    driver: bridge
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
+    driver: bridge
