--- a/nginx.conf
+++ b/nginx.conf
@@ -4,11 +4,9 @@ worker_processes  auto;
 error_log /var/log/nginx/error.log;
 pid        /var/run/nginx.pid;
 
-
 events {
     worker_connections  1024;
 }
-
 
 http {
     include       /etc/nginx/mime.types;
@@ -27,20 +25,25 @@ http {
     server {
         listen 80;
         root /usr/share/nginx/html;
+
         location / {
             autoindex on;
         }
+
         error_log /var/log/nginx/error.log;
         access_log /var/log/nginx/access.log;
 
         location /api {
-            proxy_pass http://0.0.0.0:8080;
+            proxy_pass http://localhost:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 }
+
 daemon off;
