--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,11 @@
-aiofiles==24.1.0
-aiohttp==3.10.10
-alembic==1.13.3
-async-lru==2.0.4
-asyncpg==0.30.0
-black==23.12.1
-celery==5.3.1
-charset-normalizer==3.4.0
-click==8.1.7
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-factory_boy==3.3.1
-Faker==30.8.2
 fastapi==0.115.5
-flake8==7.1.1
-isort==5.13.2
-mypy==1.13.0
+asyncpg==0.30.0
 psycopg2-binary==2.9.10
-pydantic==2.9.2
-pytest==8.3.3
-python-multipart
-redis==5.1.1
-requests==2.32.3
 SQLAlchemy==2.0.35
 uvicorn==0.32.0
-Werkzeug==2.2.2
-gunicorn==23.0.0
-uwsgi
-uvicorn[standard]
+pytest==8.3.3
+httpx==0.28.1
+alembic==1.13.3
+aiohttp
+aiofiles
+python-multipart
