--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,4 @@
+version: '3.8'
 services:
   app:
     container_name: tweet_app
@@ -6,6 +7,12 @@ services:
       - "8000:5050"
     networks:
       - mynetwork
+    environment:
+      - DB_LOGIN=${DB_LOGIN}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
     depends_on:
       - postgres
 
@@ -13,9 +20,9 @@ services:
     container_name: postgres_container
     image: postgres
     environment:
-      - POSTGRES_DB=tweet_db
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_LOGIN}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
     ports:
       - '5432:5432'
     volumes:
@@ -24,6 +31,8 @@ services:
     networks:
       - mynetwork
 
+
 networks:
   mynetwork:
     driver: bridge
+
