--- a/nginx.conf
+++ b/nginx.conf
@@ -24,8 +24,10 @@ http {
 
     server {
         listen 80;
-        root /usr/share/nginx/html;
 
+        server_name:
+
+        root /app/static;
         location / {
             autoindex on;
         }
@@ -34,7 +36,7 @@ http {
         access_log /var/log/nginx/access.log;
 
         location /api {
-            proxy_pass http://localhost:8000;
+            proxy_pass http://app:5050;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
