--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,15 @@ uvicorn==0.32.0
 pytest==8.3.3
 httpx==0.28.1
 alembic==1.13.3
+pydantic==2.7.2
 aiohttp
 aiofiles
 python-multipart
+python-dotenv==0.21.0
+databases
+anyio
+pytest-asyncio
+pytest-tornasync
+pytest-trio
+pytest-twisted
+twisted
