--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
       - postgres
 
   postgres:
-    container_name: postgres_container
+    container_name: postgresql_container
     image: postgres
     environment:
       - POSTGRES_DB=${DB_NAME}
