--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,9 +18,9 @@ services:
     container_name: postgresql_container
     image: postgres
     environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=tweet_db
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
     ports:
       - '5432:5432'
     volumes:
